2013-01-11  Murray Cumming  <murrayc@murrayc.com>

        MySQL: Add checkboxes to select MySQL when it is in the build.

        * glom/utility_widgets/filechooserdialog_saveextras.[h|cc]:
	Add checkboxes for self-hosting and central MySQL servers.
        * glom/frame_glom.cc: Handle MySQL too, though the 
	MySQL startup does not actually work here, though it
	does in the tests.

2013-01-11  Murray Cumming  <murrayc@murrayc.com>

        FileChooserDialog_SaveExtras: Simplify the ifdefing.

        * glom/utility_widgets/filechooserdialog_saveextras.cc:
	Do not worry about so many combinations of options.
	Let people worry about that if they use it.

2013-01-06  Murray Cumming  <murrayc@murrayc.com>

        MySQL:Use MySQL syntax to change columns

	* glom/libglom/connnectionpool_backends/mysql.cc:
	MYSQL uses:
	ALTER TABLE tablename CHANGE oldfieldname newfieldname oldfieldtype
	to rename columns, instead of PostgreSQL's:
	ALTER TABLE tablename RENAME oldfieldname TO newfieldname

2013-01-06  Murray Cumming  <murrayc@murrayc.com>

        MySQL: Avoid affecting PostgreSQL field types.

        * glom/libglom/db_utils.[h|cc]: create_table():
	Take the hosting mode so we can only do checks for
	relevant hosting modes.
        * glom/appwindow.cc: Adapt.

2013-01-06  Murray Cumming  <murrayc@murrayc.com>

        MySQL: Use double instead of DECIMAL for numeric values.

        * glom/libglom/db_utils.cc: create_table():
	Do not use DECIMAL with no parameters because that means
	0 decimal points, so we lose data when reading values
	back.

2013-01-06  Murray Cumming  <murrayc@murrayc.com>

        tests: Add try/catch around all calls of the test functions.

        * tests/test_selfhosting_utils.[h|cc]: 
	Check for uncaught exceptions.

2013-01-06  Murray Cumming  <murrayc@murrayc.com>

        tests: Add: test_selfhosting_new_from_example_float.cc

        * Makefile_tests.am:
        * tests/test_selfhosting_utils.[h|cc]:
	Add test_check_numeric_value_type().